welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var fin=false
  while (!positionFinal){
    if(!estFaceMur()){
      avance()
    }else{
      if(getDirection() == Direction.EST){
       gauche()
       avance()
       gauche()
      }else{
        droite()
        avance()
        droite()
      }
      
    }
  }
}

